# cliant

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TESTING.md
src/: errors.rs  main.rs  sync_cliant.rs  types.rs
src/application/: dto.rs  mod.rs
src/application/commands/: mod.rs
src/application/dto/: download_response.rs  fs_response.rs  mod.rs
src/application/services/: downloader_service.rs  mod.rs  progress_service.rs
src/async_/: download_manager.rs  mod.rs
src/domain/: commands.rs  errors.rs  mod.rs  models.rs
src/domain/commands/: fs_operation.rs  mod.rs  start_download.rs
src/domain/events/: mod.rs
src/domain/models/: download_info.rs  download_part.rs  file_info.rs  mod.rs
src/domain/ports/: download_service.rs  mod.rs  progress_tracker.rs  storage_service.rs
src/domain/services/: download.rs  infer_name.rs  merge_download.rs  mod.rs  multipart_download.rs  split_parts.rs
src/features/: mod.rs  vertical_slice.py
src/features/save_to_local/: cli.rs  handler.rs  mod.rs
src/infra/: mod.rs
src/infra/config/: http_config.rs  mod.rs
src/infra/network/: http_adapter.rs  mod.rs
src/infra/storage/: fs_adapter.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: http_config.rs  mod.rs
src/infrastructure/network/: http_adapter.rs
src/infrastructure/storage/: fs_adapter.rs  mod.rs
src/interfaces/cli/: mod.rs
src/shared/: errors.rs  mod.rs  progress_tracker.rs
src/shared/fs/: local.rs  mod.rs
src/shared/network/: factory.rs  http.rs  http_args.rs  mod.rs
src/shared/network/http/: config.rs  mod.rs
src/sync/: base_file_part.rs  check_name.rs  download_manager.rs  download_part.rs  download_task.rs  mod.rs
src/sync_client/: check_name.rs  cliant.rs  mod.rs  split_parts.rs  utils.rs
src/utils/: mod.rs  stream_utils.rs
sync_client/: cliant.rs  mod.rs
