[package]
name = "cliant"
version = "0.1.0"
edition = "2024"
authors = ["Abba Valentine <valentinechibueze400@gmail.com>"]
homepage    = "https://github.com/val-en-tine124/cliant"
repository  = "https://github.com/val-en-tine124/cliant"
readme      = "README.md"
description = "A High Performance Data Mover written in Rust Programming Language."
categories  = ["data mover"]
keywords    = ["download","data"]

[features]
local=["reqwest","reqwest-tracing","reqwest-retry","reqwest-middleware"]
default=["local"]
all=["local"]


[dependencies]

anyhow = "1.0.75"
colored = "2.0.0"
chrono = {version="0.4.41",features=["serde"]}
tokio = {version="1.45.1",features=["full"]}
tokio-utils="0.1.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] ,optional=true}
clap = { version = "4.4.2", features = ["derive","env"] }
indicatif = "0.18.0"
url = {version="2.5.4",features=["serde"]}
futures = "0.3.31"
tokio-stream = "0.1.17"
bytes = "1.10.1"
async-trait = "0.1.89"
cookie = "0.18.1"
tracing = { version = "0.1.41", features = ["async-await"] }
derive-getters = "0.5.0"
dirs = "5.0"
reqwest-middleware = {version="0.4.2",optional=true}
reqwest-tracing = {version="0.5.8",optional=true}
reqwest-retry = {version="0.7.0",optional=true}
human-panic = "2.0.4"
# The subscriber implementation for displaying traces/logs
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
derive_setters = "0.1.8"
thiserror = {version="2.0.17"}
opendal = {version="0.55.0",features=["services-fs"]}
secrecy = "0.10.3"


[dev-dependencies]
async-tempfile = "0.7.0"

[profile.release]
opt-level = 3
lto       = true

[profile.dev]
opt-level = 0
